[gd_scene format=3 uid="uid://26ljsnexi04d"]

[ext_resource type="Script" uid="uid://dlkqk01pyg2xj" path="res://characters/player/player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://brne38m67bph0" path="res://characters/player/sprites/player.png" id="2_xxgcw"]
[ext_resource type="Texture2D" uid="uid://cma608ovn201y" path="res://characters/player/sprites/flash_light.png" id="3_exd8k"]
[ext_resource type="AudioStream" uid="uid://bh5yiixt2wqlo" path="res://characters/player/sounds/heartbeat.wav" id="4_5dc8e"]
[ext_resource type="AudioStream" uid="uid://cotwf5vxwjjdv" path="res://characters/player/sounds/flatline.wav" id="5_ixbpm"]
[ext_resource type="AudioStream" uid="uid://dqqc0v3itgs7m" path="res://weapons/sounds/gunshot.wav" id="6_c6leb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_exd8k"]
atlas = ExtResource("2_xxgcw")
region = Rect2(704, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dc8e"]
atlas = ExtResource("2_xxgcw")
region = Rect2(0, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixbpm"]
atlas = ExtResource("2_xxgcw")
region = Rect2(44, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6leb"]
atlas = ExtResource("2_xxgcw")
region = Rect2(88, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_dirf7"]
atlas = ExtResource("2_xxgcw")
region = Rect2(132, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_idpv6"]
atlas = ExtResource("2_xxgcw")
region = Rect2(176, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpf03"]
atlas = ExtResource("2_xxgcw")
region = Rect2(220, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5dtk"]
atlas = ExtResource("2_xxgcw")
region = Rect2(264, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t07l"]
atlas = ExtResource("2_xxgcw")
region = Rect2(308, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_on558"]
atlas = ExtResource("2_xxgcw")
region = Rect2(352, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqopd"]
atlas = ExtResource("2_xxgcw")
region = Rect2(396, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_icpky"]
atlas = ExtResource("2_xxgcw")
region = Rect2(440, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_58jvb"]
atlas = ExtResource("2_xxgcw")
region = Rect2(484, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l73k"]
atlas = ExtResource("2_xxgcw")
region = Rect2(528, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqrcq"]
atlas = ExtResource("2_xxgcw")
region = Rect2(572, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2agh"]
atlas = ExtResource("2_xxgcw")
region = Rect2(616, 0, 44, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpo3a"]
atlas = ExtResource("2_xxgcw")
region = Rect2(660, 0, 44, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqtel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exd8k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dc8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixbpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6leb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dirf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idpv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5dtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t07l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on558")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqopd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icpky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58jvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l73k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqrcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2agh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpo3a")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="Gradient" id="Gradient_xxgcw"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_exd8k"]
gradient = SubResource("Gradient_xxgcw")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_exd8k"]
cull_mode = 1
polygon = PackedVector2Array(0, -2, 5, -2, 8, -2, 9, -1, 11, 0, 13, 1, 14, 2, 15, 3, 16, 4, 17, 6, 18, 8, 19, 10, 20, 12, 19, 15, 18, 16, 17, 17, 15, 18, 13, 19, 6, 19, 2, 20, -3, 20, -7, 19, -14, 19, -16, 18, -18, 17, -19, 16, -20, 15, -21, 12, -20, 10, -19, 8, -18, 6, -17, 4, -16, 3, -14, 2, -12, 1, -10, 0, -8, -1, -6, -2, -3, -2)

[node name="Player" type="CharacterBody2D" unique_id=1602949342]
z_index = 2
collision_layer = 2
collision_mask = 5
script = ExtResource("1_i3pqv")
speed = null
cooldown_time = null
controller_deadzone = null
velocity_threshold = null
sprite_speed_scale = null
run_speed_factor = null
spread_threshold = null
spread_per_shot = null
max_spread = null
recoil_distance = null
recoil_duration = null
min_heartbeat_interval = null
max_heartbeat_interval = null
max_enemy_distance = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1318349671]
sprite_frames = SubResource("SpriteFrames_hqtel")
animation = &"idle"

[node name="MuzzlePoint" type="Marker2D" parent="AnimatedSprite2D" unique_id=1379902603]
position = Vector2(3.5, -21.5)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=113055482]
polygon = PackedVector2Array(0, 21, 6, 20, 11, 21, 18, 17, 21, 12, 18, 6, 14, 1, 10, -1, 6, -8, 6, -14, 4, -22, 3, -22, 0, -13, -2, -7, -7, -2, -14, 0, -21, 8, -21, 14, -13, 20)

[node name="FireCooldown" type="Timer" parent="." unique_id=822690410]

[node name="AmbientLight" type="PointLight2D" parent="." unique_id=349911151]
position = Vector2(0, 10)
color = Color(0.65805507, 0.7122522, 1, 1)
energy = 0.1
shadow_enabled = true
texture = SubResource("GradientTexture2D_exd8k")

[node name="FlashLight" type="PointLight2D" parent="." unique_id=1627026364]
scale = Vector2(0.7, 1)
color = Color(1, 0.95281494, 0.735357, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 3.0
texture = ExtResource("3_exd8k")
offset = Vector2(0, -128)
texture_scale = 0.5

[node name="LightOccluder2D" type="LightOccluder2D" parent="." unique_id=19543228]
occluder = SubResource("OccluderPolygon2D_exd8k")

[node name="FlashLight2" type="PointLight2D" parent="." unique_id=1662300909]
scale = Vector2(0.7, 1)
color = Color(1, 0.95281494, 0.735357, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 3.0
shadow_item_cull_mask = 3
texture = ExtResource("3_exd8k")
offset = Vector2(0, -128)
texture_scale = 0.5

[node name="Heartbeat" type="AudioStreamPlayer" parent="." unique_id=746042723]
stream = ExtResource("4_5dc8e")
autoplay = true
bus = &"Heartbeat"

[node name="HeatbeatTimer" type="Timer" parent="." unique_id=1019211467]
autostart = true

[node name="Flatline" type="AudioStreamPlayer" parent="." unique_id=1281002796]
stream = ExtResource("5_ixbpm")
bus = &"Flatline"

[node name="Gunshot" type="AudioStreamPlayer" parent="." unique_id=1607215463]
stream = ExtResource("6_c6leb")
bus = &"Gunshot"

[connection signal="timeout" from="FireCooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="HeatbeatTimer" to="." method="_on_heatbeat_timer_timeout"]
